fix spacing issue

--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -34,7 +34,7 @@ body {
 .main {
   width: 100%;
   text-align: center;
-  padding: 2vh 1rem;
+  padding-top: 2vh;
 }
 
 .logo {
